<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BPMonitor2</string>
    <string name="last_reading_prompt">Last Reading:</string>
    <string name="enter_bp_reading_prompt">Enter Blood Pressure Reading</string>
    <string name="systolic_prompt">SYS</string>
    <string name="diastolic_prompt">DIA</string>
    <string name="pulse_prompt">PULSE</string>
    <string name="description_prompt">COMMENTS 40 characters max</string>
    <string name="hide_keyboard">>>></string>
    <string name="report_on_day">Report</string>
    <string name="last_reading_label">Last Reading:</string>
    <string name="bp_check_status_button_prompt">CHECK INDIVIDUAL DAY READING</string>
    <string name="store_button_prompt">STORE DAY READING</string>
    <string name="display_stored_readings_button_prompt">DISPLAY WEEK READINGS</string>
    <string name="reset_UI_button_prompt">RE-ENTER DAY READING</string>
    <string name="clear_weekly_readings">CLEAR WEEKLY READINGS</string>
    <string name="action_settings">Settings</string>
    <string name="BP_PREF_FILE">BP_PREF_FILE</string>
    <string name="SYSTOLIC_READING">SYSTOLIC_READING</string>
    <string name="DIASTOLIC_READING">DIASTOLIC_READING</string>
    <string name="READING_COUNT">READING_COUNT</string>
    <string name="WEEKLY_READINGS">WEEKLY_READINGS</string>
    <string name="SYSTOLIC_DIASTOLIC_STRING">SYSTOLIC_DIASTOLIC_STRING</string>
    <string name="LANGUAGE_PREF">LANGUAGE_PREF</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="return_main_prompt">RETURN TO MAIN SCREEN</string>
    <string name="weekly_readings">weekly_readings</string>
    <string name="reading_count_prompt">Out of 7 days, you have stored:</string>
    <string name="English">English</string>
    <string name="Espanol">Espanol</string>
    <string name="empty_reading_alert">You need to enter a reading!</string>
    <string name="max_alert">Max is 999!</string>
    <string name="keeper_full_message">Keeper is full. It can store a maximum of 7 days! Clear it first.</string>
    <string name="empty_keeper_alert">You do not have any stored readings to display yet. Store some first!</string>
    <string name="your_blood_pressure_is">Your blood pressure is: </string>
    <string name="high_pressure_toast">high</string>
    <string name="normal_pressure_toast">normal</string>
    <string name="low_pressure_toast">low</string>
    <string name="sys_low_dias_high_toast"> systolic low and diastolic high</string>
    <string name="sys_high_dias_low_toast">systolic high and diastolic low</string>
    <string name="yes_string">YES</string>
    <string name="no_string">NO</string>
    <string name="clear_readings_confirm_message">CLEAR ALL READINGS STORED THIS WEEK</string>
    <string name="clear_readings_confirm_question">Are you sure you want to clear them?</string>
    <string name="display_array">display_array</string>
    <string name="on_back_pressed_alert">Press again to close app</string>
    <string name="no_readings_data">There are no readings to display</string>
    <string name="is_empty">is_empty</string>
    <string name="AVG_SYS">avg_systolic</string>
    <string name="AVG_DIA">avg_diastolic</string>
    <string name="weekly_reading_store_button">STORE THIS WEEK\'S READINGS</string>
    <string name="display_past_weeks_button">DISPLAY PAST WEEKS\' READINGS</string>
    <string name="title_activity_check">CheckActivity</string>
    <string name="systolic_check_message">Your systolic blood pressure is: </string>
    <string name="diastolic_check_message">Your diastolic blood pressure is: </string>
    <string name="recommendations_label">RECOMMENDATIONS</string>
    <string name="systolic_reading">systolic_reading</string>
    <string name="diastolic_reading">diastolic_reading</string>
    <string name="recommendations">recommendations</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="store_day_report_button">STORE DAY REPORT</string>
    <string name="report_on_day_string">report_on_day</string>
    <string name="author_string">This App Was Developed by Peter R. Corletto, 2016</string>
    <string name="under_construction">Feature still under construction</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="details_title">Details about your blood pressure reading</string>
    <string name="date_time_label">Date and Time measured:</string>
    <string name="systolic_label">Systolic reading:</string>
    <string name="diastolic_label">Diastolic reading:</string>
    <string name="mmhg_label">mmHg</string>
    <string name="pulse_label">Pulse rate:</string>
    <string name="bps_label">Beats/sec</string>
    <string name="systolic_status_label">Your systolic pressure was:</string>
    <string name="diastolic_status_label">Your diastolic pressure was:</string>
    <string name="comments_label">That day, you commented the following:</string>
    <string name="not_full_yet">You still cannot store the week. It has been less than 7 readings! Store </string>
    <string name="more">more</string>
    <string name="hide_keyboard_prompt">Hide Keyboard</string>

</resources>
